include/rpd.h


struct rpd_control_type {
    bool f_indexing;
    int qplib;
    int error;
    int out;
    int print_level;
    bool space_critical;
    bool deallocate_error_fatal;
};
struct rpd_inform_type {
    int status;
    int alloc_status;
    char bad_alloc[81];
    int io_status;
    int line;
    char p_type[4];
};
void rpd_initialize( void **data,
                     struct rpd_control_type *control,
                     int *status );
void rpd_get_stats( char qplib_file[],
                    int qplib_file_len,
                    struct rpd_control_type *control,
                    void **data,
                    int *status,
                    char p_type[4],
                    int *n,
                    int *m,
                    int *h_ne,
                    int *a_ne,
                    int *h_c_ne );
void rpd_get_g( void **data,
                int *status,
                int n,
                real_wp_ g[]
                );
void rpd_get_f( void **data,
                int *status,
                real_wp_ *f
                );
void rpd_get_xlu( void **data,
                  int *status,
                  int n,
                  real_wp_ x_l[],
                  real_wp_ x_u[] );
void rpd_get_clu( void **data,
                  int *status,
                  int m,
                  real_wp_ c_l[],
                  real_wp_ c_u[] );
void rpd_get_h( void **data,
                int *status,
                int h_ne,
                int h_row[],
                int h_col[],
                real_wp_ h_val[]
                );
void rpd_get_a( void **data,
                int *status,
                int a_ne,
                int a_row[],
                int a_col[],
                real_wp_ a_val[]
                );
void rpd_get_h_c( void **data,
                  int *status,
                  int h_c_ne,
                  int h_c_ptr[],
                  int h_c_row[],
                  int h_c_col[],
                  real_wp_ h_c_val[]
                  );
void rpd_get_x_type( void **data,
                     int *status,
                     int n,
                     int x_type[] );
void rpd_get_x( void **data,
                int *status,
                int n,
                real_wp_ x[]
                );
void rpd_get_y( void **data,
                int *status,
                int m,
                real_wp_ y[] );